--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,8 @@ body {
   margin: 0 auto;
   padding: 0;
   font-family: sans-serif;
+  background-image: url("./PicturesUsed/Background2.png");
+  background-size: 800px 1024px;
+  background-repeat: no-repeat;
+
 }
