--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,49 @@
+.HomePageLogo{
+  margin: 0 auto;
+  padding:0;
+}
+
 body {
   margin: 0 auto;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("./PicturesUsed/Background2.png");
-  background-size: 800px 1024px;
+  background-image: url("./PicturesUsed/Background.png");
+  background-size: 1300px 845px;
   background-repeat: no-repeat;
+}
+
+ul{
+  padding:0;
+}
+
+li{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color:#e6e6e6;
+}
+
+.nav {
+  display: block;
+  line-height: 80px;
+  text-decoration: none;
 
 }
+
+.active {
+  text-decoration: underline;
+}
+
+.nav li{
+  font-size: 40px;
+}
+
+.button{
+  background-image: url("PicturesUsed/ClosePokeball.png");
+  background-size:100px 100px;
+  background-repeat: no-repeat;
+}
+
+
