--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,19 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+ul{
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+.dexList{
+  border: 1px solid black;
+  max-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
