--- a/src/index.css
+++ b/src/index.css
@@ -249,7 +249,7 @@ h2{
   height: 596px;
   margin-top: -17%;
   margin-left: 20%;
-  border: red solid 5px;
+  /* border: red solid 5px; */
 }
 .moveset_tb{
   width: 1280px;
@@ -293,15 +293,27 @@ td:hover{
 
 .hero_Box{
 height: 400px;
-border: blue solid 5px;
+/* border: blue solid 5px; */
 }
 
 .moveset_tb{
   position: relative;
-  top:235px;
+  top:295px;
 }
 
 .enemy_Box{
   height: 300px;
-border: yellow solid 5px;
+/* border: yellow solid 5px; */
+}
+
+.hero_sprite {
+  position: absolute;
+  top: 23%;
+  left: 25%;
+}
+
+.enemy_sprite {
+  position: absolute;
+  top:-5%;
+  right: 9%;
 }
