--- a/src/index.css
+++ b/src/index.css
@@ -291,6 +291,11 @@ td:hover{
   background-color: wheat;
 }
 
+.runBTN{
+  border: red solid 1px;
+  color:teal;
+}
+
 .hero_Box{
 height: 400px;
 /* border: blue solid 5px; */
