--- a/src/index.css
+++ b/src/index.css
@@ -262,6 +262,7 @@ td{
   font-size: 21pt;
   color: teal;
   font-weight: bold;
+  height:40px;
   padding: 25px;
   background-color: white;
   border: grey solid 2px;
@@ -285,6 +286,8 @@ td{
 
 .run_option{
   border-radius: 20px;
+  height: 100%;
+  padding:0px !important;
 }
 
 td:hover{
@@ -292,8 +295,14 @@ td:hover{
 }
 
 .runBTN{
-  border: red solid 1px;
+  display:inline-block;
+  padding:80px 0px 80px 0px !important;
+  border-radius: 20px;
+  height: 100%;
+  width:100%;
+  height:inherit;
   color:teal;
+  
 }
 
 .hero_Box{
