--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,7 @@ td{
 .run_option{
   border-radius: 20px;
   height: 100%;
-  padding:0px !important;
+  padding:0px;
 }
 
 td:hover{
@@ -296,13 +296,12 @@ td:hover{
 
 .runBTN{
   display:inline-block;
-  padding:80px 0px 80px 0px !important;
+  padding:80px 0px 80px 0px;
   border-radius: 20px;
   height: 100%;
   width:100%;
   height:inherit;
   color:teal;
-  
 }
 
 .hero_Box{
